@@ -7,6 +7,7 @@
 
 defined('_JEXEC') or die();
 
+JLoader::import('joomla.application.component.model');
 if(!class_exists('JoomlaCompatModel')) {
 	if(interface_exists('JModel')) {
 		abstract class JoomlaCompatModel extends JModelLegacy {}
@@ -18,13 +19,13 @@ if(!class_exists('JoomlaCompatModel')) {
 class DocimportModelUrls extends JoomlaCompatModel
 {
 	private $urls = array();
-	
+
 	public function __construct($config = array()) {
 		parent::__construct($config);
-		
+
 		$this->load();
 	}
-	
+
 	public function normaliseQuery($query)
 	{
 		if(empty($query)) {
@@ -34,7 +35,7 @@ class DocimportModelUrls extends JoomlaCompatModel
 			return json_encode($query);
 		}
 	}
-	
+
 	protected function load()
 	{
 		$db = $this->getDbo();
@@ -44,7 +45,7 @@ class DocimportModelUrls extends JoomlaCompatModel
 		$db->setQuery($query);
 		$this->urls = $db->loadAssocList('nonsef', 'sef');
 	}
-	
+
 	public function getSef($nonsef)
 	{
 		$nonsef = $this->normaliseQuery($nonsef);
@@ -54,7 +55,7 @@ class DocimportModelUrls extends JoomlaCompatModel
 			return false;
 		}
 	}
-	
+
 	public function getNonSef($sef)
 	{
 		if(is_array($sef)) $sef = implode('/', $sef);
@@ -64,7 +65,7 @@ class DocimportModelUrls extends JoomlaCompatModel
 		}
 		return $result;
 	}
-	
+
 	public function saveQuery($nonsef, $sef)
 	{
 		$key = $this->normaliseQuery($nonsef);
@@ -73,10 +74,10 @@ class DocimportModelUrls extends JoomlaCompatModel
 		} else {
 			$value = $sef;
 		}
-		
+
 		$existing = array_key_exists($key, $this->urls);
 		$this->urls[$key] = $value;
-		
+
 		$db = $this->getDbo();
 		if($existing) {
 			$query = $db->getQuery(true)
@@ -100,7 +101,7 @@ class DocimportModelUrls extends JoomlaCompatModel
 			return $db->execute();
 		}
 	}
-	
+
 	public function nuke()
 	{
 		$db = $this->getDbo();
