@@ -4,6 +4,7 @@ DocImport 1.0.3
 # [MEDIUM] Issues with multilingual sites
 # [MEDIUM] Document generation in the CLI wouldn't get the correct URL to images
 # [MEDIUM] Fatal error clearing the SEF URL cache
+# [MEDIUM] Missing jimport statement in URL cache model
 
 DocImport 1.0.2
 ================================================================================
